Fix modal size in media query to stop text overflowing container. Add red border to modal inner.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -135,12 +135,14 @@ h1 {
 
 .modal-inner {
     background: #fff;
+    border: 3px solid red;
     margin: 0 auto;
     height: 20%;
     width: 50%;
     top: 40%;
     position: absolute;
     left: 25%;
+
 
 
 }
@@ -271,10 +273,14 @@ h1 {
 
 /*-- Media Query section --*/
 
-@media screen and (min-width: 425px) {
+@media screen and (min-width: 425px) and (max-width:767px) {
     .vs {
         padding-top: 1.5%;
     }
+}
+
+.modal-inner {
+    height: 30%;
 }
 
 @media screen and (min-width: 768px) {
